yamls/hello-node.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellonode-deployment
  namespace: development
  labels:
    app: hellonode
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hellonode
  template:
    metadata:
      labels:
        app: hellonode
    spec:
      volumes:
        - name: hellonode-deployment-vol
          persistentVolumeClaim:
            claimName: hellonode-deployment-pvc
      containers:
        - name: hellonode-container
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
          # ports here is just informational, just addit for good practice
          # the one passed in service config is what matters
          # ports:
            # - containerPort: 8080
              # protocol: TCP
          volumeMounts:
            - mountPath: "/var/www/html/"
              name: hellonode-deployment-vol
          command: ["/agnhost"]
          args: ["serve-hostname"]
      imagePullSecrets:
        - name: rh-creds

---
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: hellonode-service
  labels:
    app: hellonode
spec:
  ports:
    - protocol: TCP
      targetPort: 9376
      port: 9376
  selector:
    app: hellonode
  type: ClusterIP


---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: development
  name: hellonode-route
spec:
  to:
    kind: Service
    name: hellonode-service
  port:
    targetPort: 9376
  wildcardPolicy: None
