yamls/network_policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-httpd-testing-namespace
  namespace: development
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            services: testing
      ports:
        - port: 8080
          protocol: TCP
